<resources>
    <string name="app_name">SiAfis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>

    <string name="empty_fields">%1$s harus diisi</string>
    <string name="not_valid">%1$s format salah</string>
    <string name="nama_atlet">Nama Atlet</string>
    <string name="tanggal">Tanggal</string>
    <string name="tambah_tanggal">Tambah Tanggal</string>
    <string name="tanggal_pendataan">Tanggal Pendataan</string>
    <string name="tambah_atlet">Tambah Atlet</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="umur">Umur</string>
    <string name="tingkat">Level</string>
    <string name="detail">Detail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="tambah_penilaian">Tambah Penilaian</string>
    <string name="nilai_kategori">Nilai kategori</string>
    <string name="jenis_penilaian">Jenis Penilaian</string>
    <string name="nilai">Nilai</string>
    <string name="hasil">Hasil</string>
    <string name="nama_test">Nama Test</string>
    <string name="hasil_tes">Hasil Tes</string>
    <string name="hasil_test">Hasil Test</string>
    <string name="data_atlet">Data Atlet</string>
    <string name="data_tanggal_pendataaan">Data Tanggal Pendataaan</string>
    <string name="filter_tes">Filter Tes</string>
    <string name="kategori_tes">Kategori Tes</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="lewati">Lewati</string>
    <string name="sistem_informasi_analisis_fisik_atlet_cabng_olahraga_bola_voli">Sistem Informasi Analisis Fisik Atlet Cabng Olahraga Bola Voli</string>
    <string name="petunjuk_pelaksanaan_tes">Petunjuk Pelaksanaan Tes</string>
    <string name="waktu_pelaksanaan_tes">Waktu Pelaksanaan Tes</string>
    <string name="profil_pengembang">Profil Pengembang</string>
    <string name="petunjuk_pelaksanaan">Petunjuk Pelaksanaan</string>
    <string name="profil">Profil</string>
    <string name="mulai_audio">Mulai Audio</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="silahkan_pilih_menu_dibawah">Silahkan Pilih Menu Dibawah :</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar_disini">Daftar disini</string>
    <string name="register">Register</string>
</resources>