<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.MainFragment"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/textView3"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sistem_informasi_analisis_fisik_atlet_cabng_olahraga_bola_voli"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/textView4"
            />

    <TextView
            android:id="@+id/tvPetunjuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_rounded"
            android:text="@string/petunjuk_pelaksanaan_tes"
            android:textColor="@color/white"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintEnd_toStartOf="@+id/tvPelaksanaan"
            android:layout_marginEnd="8dp"
            />

    <TextView
            android:id="@+id/tvPelaksanaan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_rounded"
            android:text="@string/waktu_pelaksanaan_tes"
            android:textColor="@color/white"
            android:padding="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/tvPetunjuk"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/tvPetunjuk"
            android:layout_marginStart="8dp"
            />

    <TextView
            android:id="@+id/tvPengembang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_rounded"
            android:text="@string/profil_pengembang"
            android:textColor="@color/white"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@+id/tvPetunjuk"
            app:layout_constraintStart_toStartOf="@+id/tvPetunjuk"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="@+id/tvPelaksanaan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            />


</androidx.constraintlayout.widget.ConstraintLayout>