<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.screen.TambahAtletFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/bt_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_close_24"/>

            <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

            <TextView
                    android:id="@+id/name_toolbar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tambah_atlet"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white"/>

            <ImageButton
                    android:id="@+id/iconAction"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_done_24"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nama"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama_lengkap"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/jeniskelamin"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@+id/nama"
                        app:layout_constraintStart_toStartOf="@+id/nama"
                        app:layout_constraintEnd_toEndOf="@+id/nama">

                    <AutoCompleteTextView
                            android:id="@+id/etJeniskelamin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/jenis_kelamin"
                            android:inputType="none"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/umur"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:layout_constraintStart_toStartOf="@+id/nama"
                        app:layout_constraintEnd_toEndOf="@+id/nama"
                        app:layout_constraintTop_toBottomOf="@+id/jeniskelamin">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUmur"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/umur"
                            android:inputType="phone"
                            android:digits="0123456789"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                    android:id="@+id/lyt_spacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>