<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/background"
              tools:context=".ui.screen.DetailAtletFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/bt_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_close_24"/>

            <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>

            <TextView
                    android:id="@+id/nameUser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tambah_tanggal"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white"
                    />

            <ImageButton
                    android:id="@+id/iconAction"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_done_24"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/viewJenis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_kelamin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp"/>
                <TextView
                        android:id="@+id/txtJenis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_kelamin"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="@+id/viewJenis"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/viewJenis"/>
                <TextView
                        android:id="@+id/viewUmur"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/umur"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/viewJenis"
                        app:layout_constraintTop_toBottomOf="@+id/viewJenis"/>
                <TextView
                        android:id="@+id/txtUmur"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/umur"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="@+id/viewUmur"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/viewUmur"/>
                <TextView
                        android:id="@+id/viewHasilTes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/hasil_test"
                        app:layout_constraintTop_toBottomOf="@+id/txtUmur"
                        app:layout_constraintEnd_toEndOf="@+id/txtJenis"
                        app:layout_constraintStart_toStartOf="@+id/viewUmur"
                        android:layout_marginTop="32dp"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHasil"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/viewHasilTes"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        tools:listitem="@layout/item_rv_hasil"
                        tools:itemCount="6"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                    android:id="@+id/lyt_spacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>